Fix overflow

--- a/client/src/app/main-contacts-list-section/main-contacts-list-section.component.scss
+++ b/client/src/app/main-contacts-list-section/main-contacts-list-section.component.scss
@@ -8,6 +8,7 @@
 
 		transition: height 250ms ease;
 		overflow: hidden;
+		position: relative;
 
 		&.animated .banner { transition: all 250ms ease; }
 
